--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(AOC2024)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(day01cpp day01cpp/day1main.cpp)
-#add_executable(day02cpp day02cpp/main.cpp)
+add_executable(day02cpp day02cpp/main.cpp)
 #add_executable(day03cpp day03cpp/main.cpp)
 #add_executable(day04cpp day04cpp/main.cpp)
 #add_executable(day05cpp day05cpp/main.cpp)
